# koya-plugins

./: .gitignore  README.md  build.sh  meson.build  module_hooks.h
dbus/: CMakeLists.txt  meson.build
dbus/src/: module.cpp
ffmpeg/: CMakeLists.txt  meson.build
ffmpeg/src/: module.cpp
http/: CMakeLists.txt  meson.build
http/cpp-httplib/: CMakeLists.txt  httplib.h
http/src/: Http.cpp  Http.hpp  module.cpp
hypr/: CMakeLists.txt  meson.build
hypr/src/: module.cpp
pam/: CMakeLists.txt  meson.build
pam/src/: module.cpp
process/: CMakeLists.txt  meson.build
process/src/: module.cpp
sdk/: module_hooks.h
sdk/quickjs/: quickjs.h
sdk/threaded/: Queue.hpp
sqlite/: CMakeLists.txt  meson.build
sqlite/src/: module.cpp
ws/: CMakeLists.txt  meson.build
ws/IXWebSocket/: CMakeLists.txt  meson.build
ws/src/: module.cpp
